--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Fullpage Animations</title>
+    <link rel="stylesheet" href="./fullpage.min.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
@@ -32,5 +33,8 @@
         <h1>Other Animations</h1>
       </section>
     </div>
+
+    <script src="./fullpage.min.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
