--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
         <h1>Other Animations</h1>
       </section>
     </div>
-
+    <!-- Chaining multiple animations -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"
+      integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk="
+      crossorigin="anonymous"
+    ></script>
+    <!-- Animation -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"
+      integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U="
+      crossorigin="anonymous"
+    ></script>
     <script src="./fullpage.min.js"></script>
     <script src="./app.js"></script>
   </body>
